# one-record-server

./: .pre-commit-config.yaml  Dockerfile  README.md  _API.py  _CARGO.py  generate.py  generate_namespaces.py  pyproject.toml  test.http
app/: main.py
app/dependencies/: datetime.py  graph.py  http_client.py
app/internal/: assessment.py  testing.py
app/models/: activity_sequence.py  address.py  booking.py  carrier.py  code_list_element.py  common.py  company.py  error.py  line_item_package.py  location.py  logistics_activity.py  logistics_agent.py  logistics_object.py  movement_time.py  notification.py  organization.py  party.py  physical_logistics_object.py  piece.py  server_information.py  shipment.py  subscription.py  transport_movement.py  value.py  waybill.py  waybill_line_item.py
app/namespaces/: _API.py  _CARGO.py  _CODELISTS.py  __init__.py
app/namespaces/code_lists/: _AIRCRAFTPOSSIBILITYCODE.py  _AWBUSEINDICATOR.py  _CHARGECODE.py  _CHARGEIDENTIFIER.py  _COMMODITYCODE.py  _DANGEROUSGOODSCODE.py  _DEMURRAGECODE.py  _ENTITLEMENTCODE.py  _EXPLOSIVECOMPATIBILITYGROUPCODE.py  _GOODSTYPECODE.py  _GOODSTYPEEXTENSIONCODE.py  _MEASUREMENTUNITCODE.py  _MODECODE.py  _MOVEMENTINDICATOR.py  _OTHERCHARGECODE.py  _PACKAGEMARKCODE.py  _PACKAGINGDANGERLEVELCODE.py  _PARTICIPANTIDENTIFIER.py  _PREPAIDCOLLECTINDICATOR.py  _RADIOACTIVEMATERIALCLASSIFICATION.py  _RATECLASSCODE.py  _RATINGSTYPE.py  (+17 more)
app/routers/: logistics_events.py  logistics_objects.py  notifications.py  server_information.py  subscriptions.py
app/utils/: rdf.py
app/validators/: movement_time_type_validator.py  participant_identifier_validator.py  topic_type_validator.py  waybill_type_validator.py
test/: test.http
tests/: conftest.py  test.http  test_server_information.py
(+1 files in other folders)
