[project]
name = "one-record-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "rdflib",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "mypy>=1.19.1",
]

[tool.ruff.lint]
extend-select = [
    "I"
]
