[project]
name = "one-record-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]",
    "orjson>=3.11.5",
    "pyld>=2.0.4",
    "rdflib",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.ruff.lint]
extend-select = [
    "I",
]

[[tool.mypy.overrides]]
module = [
    "pyld",
]
ignore_missing_imports = true
