[project]
name = "one-record-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi[standard]>=0.125.0",
    "orjson>=3.11.5",
    "pyld>=2.0.4",
    "rdflib>=7.5.0",
    "devtools>=0.12.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "pandas[html]>=2.3.3",
    "pre-commit>=4.5.1",
    "requests>=2.32.5",
    "selenium>=4.39.0",
]

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.per-file-ignores]
# Ignore `E741` (ambiguous variable name) in all files under `app/namespaces/code_lists/`.
"app/namespaces/code_lists/*.py" = ["E741"]

[[tool.mypy.overrides]]
module = [
    "pyld.*",
]
ignore_missing_imports = true
